welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
 while (!estSurBiscuit) {
 	if (isFacingTrail())
 		{ braisseBrosse();leveBrosse(); avance()}
 }
}

def isFacingTrail():Boolean = {
	var sol: Boolean = false
   		if (!estFaceMur()) {
   			avance()
   			if (getCouleurSol() == Color.green)
   		 		{recule(); sol = true}
   			else {recule()}
}
   return sol		
}        
// Copy your isFacingTrail() here
